--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <nav>
             <span><i class="fa-solid fa-person-walking"></i></span>
             <ul>
-                <li>Getting started</li>
+                <li>Getting Started</li>
                 <li>Learn More</li>
-                <li>About us</li>
+                <li>About Us</li>
             </ul>
         </nav>
-        <video muted loop autoplay src="./assets/videos/coding.mp4"></video>
-        <h1>Any Passion for coding</h1>
+        <video id="video-bg" muted loop autoplay src="assets/videos/video-main.mp4"></video>
+        <h1>Running <i class="fa-solid fa-person-running"></i> for free spirit</h1>
         <ul class="social-media">
             <li><i class="fa-brands fa-youtube"></i> YouTube</li>
             <li><i class="fa-brands fa-facebook"></i> Facebook</li>
